# spacetrader-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/automations/: acquisitions.rs  contracts.rs  mining.rs  mod.rs  queries.rs  ship_automation.rs
src/automations/actions/: deliver.rs  look_for_delivery.rs  look_for_fuel.rs  look_for_market.rs  look_for_mine.rs  mine.rs  mod.rs  refuel_ship.rs  sell_cargo.rs  try_refuel.rs
src/automations/mining/: find_delivery.rs  find_trait.rs  look_for_fuel.rs  look_for_market.rs  look_for_mine.rs  mine.rs  mining.rs  mod.rs  navigate_to_fuel.rs  navigate_to_market.rs  navigate_to_mine.rs  refuel_ship.rs  sell_cargo.rs  state.rs  state_after_delivering.rs  state_after_mining.rs  (+9 more)
src/commands/: info.rs  mod.rs  register.rs  run.rs  status.rs
src/helpers/: cli.rs  commands.rs  credentials.rs  mod.rs
src/local_data/: credentials.rs  mod.rs  ship.rs  ships.rs
src/queries/: accept_contract.rs  agent.rs  cargo.rs  contract.rs  contracts.rs  contracts_page.rs  deliver.rs  dock.rs  extract.rs  faction.rs  factions.rs  factions_page.rs  fulfill.rs  get_rate_limit.rs  market.rs  mod.rs  nav.rs  navigate.rs  orbit.rs  purchase_ship.rs  query.rs  refuel.rs  register.rs  request_not_cloned_error.rs  sell.rs  ship.rs  ships.rs  ships_page.rs  shipyard.rs  status.rs  status_error.rs  system.rs  systems.rs  systems_page.rs  too_many_retries_error.rs  waypoint.rs  waypoints.rs  waypoints_page.rs
src/spacetraders_api/: mod.rs  system.rs  waypoint.rs
src/utilities/: cli.rs  commands.rs  mod.rs
(+143 files in other folders)
